# meme.ir

./: .gitignore  blob.py  build.py  classification.py  color.py  embed.py  helper.py  main.py  ocr.py  processing.py  readme.md  requirements.txt  server.py  text.py  top100.py  tsne.py  visualise.py
examples/: readme.md
frontend/: Cargo.toml  index.html
frontend/src/: examples.rs  fetch.rs  image.rs  main.rs  templates.rs
results/out-processing/: 15m6zd.jpg.txt  1850i9.jpg.txt  1e3z5i.jpg.txt  1ejral.jpg.txt  1elzxg.jpg.txt  1i6wb7.jpg.txt  1ijoml.jpg.txt  1kfw1s.jpg.txt  1nzt0f.jpg.txt  1xbqwn.jpg.txt  22mzk5.jpg.txt  24rzki.jpg.txt  26v90j.jpg.txt  273fnp.jpg.txt  290jgj.jpg.txt  2l9wwa.jpg.txt  2o2a8b.jpg.txt  2r0zug.jpg.txt  2r3fwl.jpg.txt  2s79gs.jpg.txt  2stdl7.jpg.txt  2t06vf.jpg.txt  2tk3rb.jpg.txt  2usfnn.jpg.txt  2vfwxl.jpg.txt  2vqi2y.jpg.txt  2wtdfc.jpg.txt  2wz5gw.jpg.txt  2xgu9p.jpg.txt  2xguur.jpg.txt  30dzs9.jpg.txt  30e04e.jpg.txt  310c72.jpg.txt  310cxv.jpg.txt  312pi1.jpg.txt  3170p3.jpg.txt  3bdgk6.jpg.txt  3ckarh.jpg.txt  3du6tf.jpg.txt  3duul1.jpg.txt  (+51 more)
results/out-simple/: 15m6zd.jpg.txt  1850i9.jpg.txt  1e3z5i.jpg.txt  1eeb9t.jpg.txt  1ejral.jpg.txt  1elzxg.jpg.txt  1hc1pq.jpg.txt  1i6wb7.jpg.txt  1ijoml.jpg.txt  1kfw1s.jpg.txt  1nzt0f.jpg.txt  1xbqwn.jpg.txt  22mzk5.jpg.txt  24rzki.jpg.txt  25pypz.jpg.txt  26v90j.jpg.txt  273fnp.jpg.txt  290jgj.jpg.txt  2918rk.jpg.txt  2l9wwa.jpg.txt  2lei1h.jpg.txt  2o2a8b.jpg.txt  2qklki.jpg.txt  2r0zug.jpg.txt  (+74 more)
src/: classification.py  embed.py  experiment.py  generate.py  main.py  server.py
(+102 files in other folders)
